--- a/game-runner/src/app/globals.css
+++ b/game-runner/src/app/globals.css
@@ -3,13 +3,19 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --cpdblue: #004ED8;
+  --cplblue: #00A4FF;
+  --cpfuscia: #FF0080;
+  --cporange: #FF8B00;
+  --cngray: #1A1A1A;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-futura);
   --font-mono: var(--font-geist-mono);
+  --color-cpdblue: var(--cpdblue);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +28,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-futura);
 }
